css/style.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,400;0,600;0,700;0,800;0,900;1,100;1,400;1,600;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Barlow Condensed", sans-serif;
}

header {
    background-color: #000;
    padding: .5rem;
}

.img-logo-credits {
    margin-left: 2rem;
    width: 120px;
}

.hero {
    height: 75vh;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.text-hero {
    display: flex;
    flex-direction: column;
}

.title-hero-credits {
    font-size: 4.5em;
    margin-left: 3.5rem;
    margin-top: 4.5rem;
}

.text-hero-credits {
    font-size: 1.5rem;
    font-weight: bolder;
    margin-left: 5rem;
    margin-top: 1rem;
}

.subtext-hero-credits {
    font-size: 1.25em;
    font-weight: 400;
    margin-left: 7rem;
    margin-top: 1rem;
}

.img-credits {
    margin-right: 2rem;
    width: 525px;
}

.license {
    border: 5px solid #FF9610;
    border-radius: 8px;
    margin: 2rem;
    padding: 2rem;
}

.title-license {
    font-size: 1.75em;
}

.img-license {
    width: 20px;
    margin: 0 .5rem;
}

.text-license {
    font-size: 1.15rem;
    margin-top: .5rem;
    margin-left: 1rem;
}

